name: example
version: 0.0.0
build-type: Simple
cabal-version: >= 1.10

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Lib
  build-depends: base >= 4.7 && < 5

executable example-app
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: Main.hs
  build-depends: base >= 4.7 && < 5, example

test-suite example-test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Main.hs
  build-depends: base >= 4.7 && < 5, example, hspec

benchmark example-bench
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: bench
  main-is: Main.hs
  build-depends: base >= 4.7 && < 5, criterion, example
