name: example
version: 0.0.0
build-type: Simple
cabal-version: >= 1.10
license: MIT
license-file: LICENSE
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/rcook/example.git

executable example
  default-language: Haskell2010
  main-is: Main.hs
  build-depends: base >= 4.7 && < 5
