name: example
version: 0.0.0
build-type: Simple
cabal-version: >= 1.10
license: MIT
license-file: LICENSE
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/rcook/example.git

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Lib
  build-depends: base >= 4.7 && < 5

executable example-app
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: Main.hs
  build-depends: base >= 4.7 && < 5, example
