name:                           example
version:                        0.1.0.0
license:                        MIT
license-file:                   LICENSE
author:                         Richard Cook
maintainer:                     rcook@rcook.org
copyright:                      2017 Richard Cook
category:                       Command Line
build-type:                     Simple
cabal-version:                  >= 1.10
extra-source-files:             README.md

library
  default-language:             Haskell2010
  ghc-options:                  -Wall -Werror
  hs-source-dirs:               src
  build-depends:                base >= 4.7 && < 5
  exposed-modules:              Quaternion
                              , Triplet

executable example-app
  default-language:             Haskell2010
  hs-source-dirs:               app
  main-is:                      Main.hs
  other-modules:                Demo
  build-depends:                base >= 4.7 && < 5
                              , example

test-suite example-test
  type:                         exitcode-stdio-1.0
  default-language:             Haskell2010
  hs-source-dirs:               test
  main-is:                      Main.hs
  other-modules:                QuaternionSpec
                              , TripletSpec
  build-depends:                base >= 4.7 && < 5
                              , example
                              , hspec
