name:                example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rcook/example#readme
license:             BSD3
license-file:        LICENSE
author:              Richard Cook
maintainer:          rcook@rcook.org
copyright:           2017 Richard Cook
category:            Command Line
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Internal
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable example-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , example
  default-language:    Haskell2010

test-suite example-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , example
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rcook/example
