name:                importing
version:             0.1.0.0
build-type:          Simple
cabal-version:       >= 1.10

executable importing
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , hashmap
                     , vector
