name: example
description: example
synopsis: example
version: 0.1.0.0
build-type: Simple
cabal-version: >= 1.10
license: MIT
license-file: LICENSE
category: Command Line
maintainer: Richard Cook <rcook@rcook.org>

executable example
  default-language: Haskell2010
  main-is: Main.hs
  build-depends: base >= 4.7 && < 5, blockhash, vector, local-package
