name: local-package
description: local-package
synopsis: local-package
version: 0.1.0.0
build-type: Simple
cabal-version: >= 1.10
license: MIT
license-file: LICENSE
category: Command Line
maintainer: Richard Cook <rcook@rcook.org>

library
  default-language: Haskell2010
  exposed-modules: LocalPackage
  build-depends: base >= 4.7 && < 5
