name: html-parsing
version: 0.1.0.0
cabal-version: >= 1.10
build-type: Simple

executable html-parsing
  default-language: Haskell2010
  main-is:              Main.hs
  other-modules:        TagSoupDemo
                      , TaggyDemo
  build-depends:        MissingH
                      , base >= 4.7 && < 5
                      , taggy
                      , tagsoup
                      , text
