name:                             to-do
version:                          0.1.0.0
homepage:                         https://github.com/rcook/to-do#readme
license:                          MIT
license-file:                     LICENSE
author:                           Richard Cook
maintainer:                       rcook@rcook.org
copyright:                        2017 Richard Cook
category:                         Command Line
build-type:                       Simple
cabal-version:                    >= 1.10
extra-source-files:               README.md

executable to-do-exe
  default-language:               Haskell2010
  hs-source-dirs:                 app
  main-is:                        Main.hs
  ghc-options:                    -Werror -fwarn-incomplete-patterns
  build-depends:                  MissingH
                                , aeson
                                , base >= 4.7 && < 5
                                , bytestring
                                , directory
                                , listsafe
                                , optparse-applicative
                                , strict
                                , text
                                , time
                                , yaml
